Criando sequencia de rotas e login

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./img/ARYA_LOGO.png" />
+    <link rel="icon" href="../src/img/ARYA_LOGO.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <style>
@@ -14,7 +14,7 @@
     />
     <link rel="apple-touch-icon" href="../src/img/ARYA_LOGO.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Arya</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
